--- a/friends.html
+++ b/friends.html
@@ -34,6 +34,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="#">
+                    <span class="nav__notification">1</span>
                 <i class="far fa-comment fa-2x"></i>
             </a class="nav__link">
         </li>
@@ -44,6 +45,7 @@
         </li>
         <li class="nav__btn">
             <a class="nav__link" href="#">
+                <span class="nav__dot"></span>
                 <i class="fa-solid fa-ellipsis-h fa-2x"></i>
             </a>
         </li>
