--- a/friends.html
+++ b/friends.html
@@ -36,6 +36,11 @@
         </div>
     </header>
 
+    <a id="friends-display-link">
+        <i class="fa-solid fa-circle-info"></i> Friends Names Display 
+        <i class="fa-solid fa-chevron-right fa-xs"></i>
+
+    </a>
 
     <nav class="nav">
         <ul class="nav__list">
