--- a/friends.html
+++ b/friends.html
@@ -35,6 +35,21 @@
             <span><i class="fa-solid fa-gear fa-lg"></i></span>
         </div>
     </header>
+    <a id="friends-display-link">
+        <i class="fa-solid fa-circle-info"></i>
+        Friends' Names Display
+        <i class="fa-solid fa-chevron-right fa-xs"></i>
+    </a>
+    <div class="user-component">
+        <div class="user-component__column">
+            <img src="#" />
+            <div class="user-component__text">
+                
+            </div>
+        </div>
+        <div class="user-component__column"></div>
+    </div>
+
 
 
     <nav class="nav">
