--- a/friends.html
+++ b/friends.html
@@ -53,6 +53,23 @@
             </div>
             <div class="user-component__column"></div>
         </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fa-solid fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/96895747?v=4" class="user-component__avatar user-component__avatar--sm"/>
+                    <div class="user-component__text">
+                            <span>2</span>                        
+                            <i class="fa-solid fa-chevron-right fa-xs"></i>
+                    </div>
+                </div>
+                <div class="user-component__column"></div>
+
+            </div>
+        </div>
     </main>
 
 
