--- a/friends.html
+++ b/friends.html
@@ -62,12 +62,13 @@
                 <div class="user-component__column">
                     <img src="https://avatars.githubusercontent.com/u/96895747?v=4" class="user-component__avatar user-component__avatar--sm"/>
                     <div class="user-component__text">
-                            <span>2</span>                        
-                            <i class="fa-solid fa-chevron-right fa-xs"></i>
+                        <h4 class="user-component__title">Channel</h4>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
-
+                <div class="user-component__column">
+                    <span>2</span>                        
+                    <i class="fa-solid fa-chevron-right fa-xs"></i>
+                </div>
             </div>
         </div>
     </main>
