--- a/friends.html
+++ b/friends.html
@@ -62,7 +62,7 @@
                 <div class="user-component__column">
                     <img src="https://avatars.githubusercontent.com/u/96895747?v=4" class="user-component__avatar user-component__avatar--sm"/>
                     <div class="user-component__text">
-                        <h4 class="user-component__title">Channel</h4>
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                     </div>
                 </div>
                 <div class="user-component__column">
