--- a/find.html
+++ b/find.html
@@ -46,6 +46,25 @@
             <h6 class="recommended-friends__title">Recommended Friends</h6>
             <span>You have no recommended friends.</span>
         </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <span>Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i></span>
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                <div class="open-post__members">
+                    <img src="https://cdn.newscj.com/news/photo/202012/newscj_%EC%B2%9C%EC%A7%80%EC%9D%BC%EB%B3%B4_2020_12_1_53827_844995.jpg" />
+                    <span class="open-post__member-count">802 members</span>
+                    <div class="divider"></div>
+                    <span class="open-post__member-status">Active</span>
+                </div>
+                </div>
+                <div class="open-post__column"></div>
+            </div>
+        </div>
     </main>
     <nav class="nav">
         <ul class="nav__list">
