--- a/find.html
+++ b/find.html
@@ -35,12 +35,12 @@
         </div>
     </header>
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__icon">
+        <div class="icon-row">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-qrcode"></i><span>QR Code</span></div>
-            <div class="find-icons__icon"><i class="fa-solid fa-address-book"></i><span>Add by Contacts</span></div>
-            <div class="find-icons__icon"><i class="fa-solid fa-fingerprint"></i><span>Add by ID</span></div>
-            <div class="find-icons__icon"><i class="fa-solid fa-envelope"></i><span>Invite</span></div>
+            <div class="icon-row__icon"><i class="fa-solid fa-address-book"></i><span>Add by Contacts</span></div>
+            <div class="icon-row__icon"><i class="fa-solid fa-fingerprint"></i><span>Add by ID</span></div>
+            <div class="icon-row__icon"><i class="fa-solid fa-envelope"></i><span>Invite</span></div>
         </div>
         <div class="recommended-friends">
             <h6 class="recommended-friends__title">Recommended Friends</h6>
@@ -62,7 +62,14 @@
                     <span class="open-post__member-status">Active</span>
                 </div>
                 </div>
-                <div class="open-post__column"></div>
+                <div class="open-post__column">
+                    <div class="open-post__photo">
+                      <img src="https://cdn.newscj.com/news/photo/202012/newscj_%EC%B2%9C%EC%A7%80%EC%9D%BC%EB%B3%B4_2020_12_1_53827_844995.jpg"" />
+                      <div class="open-post__heart-count">
+                        <i class="fas fa-heart fa-xs"></i><span>326</span>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
     </main>
