--- a/chat.html
+++ b/chat.html
@@ -76,6 +76,10 @@
         </div>
       </form>
 
+      <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
+  
 
     <script src="https://kit.fontawesome.com/689b1298bc.js" crossorigin="anonymous"></script>
 </body>
