--- a/find.html
+++ b/find.html
@@ -100,6 +100,11 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
+  
+
     <script src="https://kit.fontawesome.com/689b1298bc.js" crossorigin="anonymous"></script>
 </body>
 
