--- a/friends.html
+++ b/friends.html
@@ -110,6 +110,12 @@
     <i class="fas fa-comment"></i>
 </div>
 
+<div id="no-mobile">
+    <span>Your screen is too big ㅠㅠ</span>
+  </div>
+
+
+
     <script src="https://kit.fontawesome.com/689b1298bc.js" crossorigin="anonymous"></script>
 </body>
 
