--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
+  
+
 
 
     <script src="https://kit.fontawesome.com/689b1298bc.js" crossorigin="anonymous"></script>
