--- a/setting.html
+++ b/setting.html
@@ -92,6 +92,10 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
+
     <script src="https://kit.fontawesome.com/689b1298bc.js" crossorigin="anonymous"></script>
 </body>
 
