--- a/chat.html
+++ b/chat.html
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header-title">IU</h1>
+            <h1 class="alt-header-title">HI JUNSU</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
