--- a/chat.html
+++ b/chat.html
@@ -31,50 +31,53 @@
             </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header-title">IU</h1>
+            <h1 class="alt-header-title">JUNSU KIM</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-bars fa-lg"></i></span>
         </div>
     </header>
-    
+
     <main class="main-screen main-chat">
         <div class="chat__timestamp">
             MonDay, May 23, 2022
         </div>
         <div class="message-row">
-            <img src="https://avatars.githubusercontent.com/u/96895747?v=4" class="user-component__avatar user-component__avatar"/>
+            <img src="https://avatars.githubusercontent.com/u/96895747?v=4"
+                class="user-component__avatar user-component__avatar" />
 
             <div class="message-row__content">
                 <span class="message__author">JUNSU KIM</span>
                 <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
+                    <span class="message__bubble">귀차나...</span>
                     <span class="message__time">21:28</span>
                 </div>
             </div>
-            </div>
-            <div class="message-row message-row--own">
-                <div class="message-row__content">
-                  <div class="message__info">
-                    <span class="message__bubble">Hi nice to meet you!</span>
-                    <span class="message__time">21:27</span>
-                  </div>
+        </div>
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">삭제된 메세지입니다.</span>
+                    <span class="message__time">21:29</span>
                 </div>
-              </div>
-            </main>
+            </div>
+
+        </div>
+
+    </main>
     <form class="reply">
         <div class="reply__column">
-          <i class="far fa-plus-square fa-lg"></i>
+            <i class="far fa-plus-square fa-lg"></i>
         </div>
         <div class="reply__column">
-          <input type="text" placeholder="Write a message..." />
-          <i class="far fa-smile-wink"></i>
-          <button>
-            <i class="fas fa-arrow-up"></i>
-          </button>
+            <input type="text" placeholder="메세지를 입력해주세요..." />
+            <i class="far fa-smile-wink"></i>
+            <button>
+                <i class="fas fa-arrow-up"></i>
+            </button>
         </div>
-      </form>
+    </form>
 
 
     <script src="https://kit.fontawesome.com/689b1298bc.js" crossorigin="anonymous"></script>
