--- a/chats.html
+++ b/chats.html
@@ -41,18 +41,20 @@
         <a href="chat.html">
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="https://avatars.githubusercontent.com/u/96895747?v=4" class="user-component__avatar user-component__avatar"/>
+                    <img src="https://avatars.githubusercontent.com/u/96895747?v=4"
+                        class="user-component__avatar user-component__avatar" />
                     <div class="user-component__text">
-                    <h4 class="user-component__title">JUNSU KIM</h4>
-                    <h6 class="user-component__subtitle">Please Check My Kokoa Account Info</h6>
+                        <h4 class="user-component__title">JUNSU KIM</h4>
+                        <h6 class="user-component__subtitle">귀차나...
+                        </h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:15</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:15</span>
-                <div class="badge">1</div>
-            </div>
-        </div>
-    </a>
+        </a>
 
     </main>
     <nav class="nav">
@@ -67,18 +69,18 @@
                     <span class="nav__notification badge">1</span>
                     <i class="fa-solid fa-comment fa-2x"></i>
                 </a class="nav__link">
-        </li>
-        <li class="nav__btn">
-            <a class="nav__link" href="find.html">
-                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-            </a class="nav__link">
-        </li>
-        <li class="nav__btn">
-            <a class="nav__link" href="more.html">
-                <span class="nav__dot"></span>
-                <i class="fa-solid fa-ellipsis-h fa-2x"></i>
-            </a>
-        </li>
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="find.html">
+                    <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                </a class="nav__link">
+            </li>
+            <li class="nav__btn">
+                <a class="nav__link" href="more.html">
+                    <span class="nav__dot"></span>
+                    <i class="fa-solid fa-ellipsis-h fa-2x"></i>
+                </a>
+            </li>
         </ul>
     </nav>
 
